--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "websockets>=12.0",
     "pyyaml>=6.0.1",
+    "psutil>=7.2.1",
 ]
 
 [project.optional-dependencies]
