--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,6 @@ dmypy.json
 .plan/
 rules/
 AGENTS.md  
+
+# Tailwind CSS build output (run 'task css:build' to generate)
+backend/static/css/tailwind.css
