--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "websockets>=12.0",
     "pyyaml>=6.0.1",
     "psutil>=7.2.1",
+    "pytailwindcss>=0.3.0",
 ]
 
 [project.optional-dependencies]
