--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "pyyaml>=6.0.1",
     "psutil>=7.2.1",
     "pytailwindcss>=0.3.0",
+    "pyarrow>=14.0.0",
 ]
 
 [project.optional-dependencies]
