refactor: rename project from unistore-benchmark to flakebench
- Updated project name across all relevant files and configurations.
- Changed database name from UNISTORE_BENCHMARK to FLAKEBENCH in environment settings and code.
- Modified greeting message in main.py to reflect the new project name.
- Adjusted logging and result storage references to align with the new naming convention.
- Removed obsolete pg.txt file to streamline project structure.
- Enhanced overall consistency in naming throughout the codebase.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "unistore-benchmark"
+name = "flakebench"
 version = "0.1.0"
 description = "Performance benchmarking tool for Snowflake (Standard, Hybrid, Interactive Tables) and Postgres - 3DMark for databases"
 requires-python = ">=3.11"
