Sync local changes: cleanup temp docs, add tests, update backend
- Remove temporary analysis MD files from root
- Add new test files for AI SQL, catalog, comparison features
- Update backend routes, orchestrator, and test executor
- Add delayed enrichment and methodology docs
- Update UI components and JS modules

.... Generated with [Cortex Code](https://docs.snowflake.com/user-guide/snowflake-cortex/cortex-agents)

Co-Authored-By: Cortex Code <noreply@snowflake.com>

--- a/env.example
+++ b/env.example
@@ -1,8 +1,6 @@
 # Unistore Benchmark - Example environment file
 # Copy to `.env` and fill in values:
 #   cp env.example .env
-#
-# NOTE: Postgres is optional and is NOT connected to at startup by default.
 
 # -----------------------------------------------------------------------------
 # App
@@ -27,8 +25,24 @@ LIVE_METRICS_POST_URL=
 LIVE_METRICS_POST_TIMEOUT_SECONDS=0.5
 
 # -----------------------------------------------------------------------------
-# Snowflake (required)
+# Credential Encryption
 # -----------------------------------------------------------------------------
+# 32-character key for AES-256-GCM encryption of stored connection credentials.
+# REQUIRED for production. A default key is used if not set (with warning).
+# Can be set here or as an environment variable (env var takes precedence).
+# FLAKEBENCH_CREDENTIAL_KEY=YourSecure32CharacterKeyHere!!!
+
+# -----------------------------------------------------------------------------
+# Snowflake Bootstrap Connection (required)
+# -----------------------------------------------------------------------------
+# This connection is used for:
+#   - Reading/writing the CONNECTIONS table (Settings page)
+#   - Storing test results
+#   - Schema management
+#
+# NOTE: Benchmark target connections (Snowflake + Postgres) are configured
+# via the Settings page and stored encrypted in the CONNECTIONS table.
+
 SNOWFLAKE_ACCOUNT=your_account.region
 SNOWFLAKE_USER=your_username
 SNOWFLAKE_PASSWORD=your_password
@@ -37,7 +51,7 @@ SNOWFLAKE_DATABASE=FLAKEBENCH
 SNOWFLAKE_SCHEMA=PUBLIC
 SNOWFLAKE_ROLE=ACCOUNTADMIN
 
-# Snowflake connection pool (RESULTS / persistence)
+# Connection pool (results persistence + UI reads)
 SNOWFLAKE_POOL_SIZE=5
 SNOWFLAKE_MAX_OVERFLOW=10
 SNOWFLAKE_POOL_TIMEOUT=30
@@ -46,11 +60,11 @@ SNOWFLAKE_POOL_MAX_PARALLEL_CREATES=8
 
 # Thread pools
 # - Results executor: persistence + UI reads from results tables
-# - Benchmark executor: workload execution (must be >= requested concurrency per node to avoid app-side queueing)
+# - Benchmark executor: workload execution (>= requested concurrency to avoid app-side queueing)
 SNOWFLAKE_RESULTS_EXECUTOR_MAX_WORKERS=16
 SNOWFLAKE_BENCHMARK_EXECUTOR_MAX_WORKERS=256
 
-# Snowflake connector timeouts (seconds) - helps uvicorn --reload shutdown cleanly
+# Connector timeouts (seconds) - helps uvicorn --reload shutdown cleanly
 SNOWFLAKE_CONNECT_LOGIN_TIMEOUT=15
 SNOWFLAKE_CONNECT_NETWORK_TIMEOUT=15
 SNOWFLAKE_CONNECT_SOCKET_TIMEOUT=15
@@ -60,25 +74,3 @@ SNOWFLAKE_CONNECT_SOCKET_TIMEOUT=15
 SNOWFLAKE_BENCHMARK_CONNECT_LOGIN_TIMEOUT=15
 SNOWFLAKE_BENCHMARK_CONNECT_NETWORK_TIMEOUT=60
 SNOWFLAKE_BENCHMARK_CONNECT_SOCKET_TIMEOUT=60
-
-# -----------------------------------------------------------------------------
-# Postgres (optional)
-# -----------------------------------------------------------------------------
-# Only connect to Postgres during app startup if you explicitly opt in:
-POSTGRES_CONNECT_ON_STARTUP=false
-
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
-# Fallback database if template doesn't specify one.
-# Templates now dynamically use the database selected in the UI dropdown.
-POSTGRES_DATABASE=postgres
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=
-
-# Postgres pool sizing (applies to all dynamically created pools)
-POSTGRES_POOL_MIN_SIZE=5
-POSTGRES_POOL_MAX_SIZE=20
-
-
-
-
