--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "psutil>=7.2.1",
     "pytailwindcss>=0.3.0",
     "pyarrow>=14.0.0",
+    "numpy>=1.26.0",
 ]
 
 [project.optional-dependencies]
