refactor: update Snowflake connection settings and enhance documentation
- Changed default Snowflake schema to TEST_RESULTS and role to FLAKEBENCH_ROLE for improved security.
- Added guidance in the README for creating a dedicated role with minimal privileges, discouraging the use of ACCOUNTADMIN.
- Enhanced application configuration to support dual-mode operation for Snowpark Container Services (SPCS) and standalone deployments.
- Implemented OAuth token authentication for SPCS, improving security and flexibility in connection management.
- Updated various frontend components to improve user experience and error handling in the dashboard and configuration pages.

--- a/env.example
+++ b/env.example
@@ -42,14 +42,17 @@ LIVE_METRICS_POST_TIMEOUT_SECONDS=0.5
 #
 # NOTE: Benchmark target connections (Snowflake + Postgres) are configured
 # via the Settings page and stored encrypted in the CONNECTIONS table.
+#
+# IMPORTANT: Using ACCOUNTADMIN is not recommended. See spcs/README.md for
+# instructions on creating a dedicated FLAKEBENCH_ROLE with minimal privileges.
 
 SNOWFLAKE_ACCOUNT=your_account.region
 SNOWFLAKE_USER=your_username
 SNOWFLAKE_PASSWORD=your_password
 SNOWFLAKE_WAREHOUSE=COMPUTE_WH
 SNOWFLAKE_DATABASE=FLAKEBENCH
-SNOWFLAKE_SCHEMA=PUBLIC
-SNOWFLAKE_ROLE=ACCOUNTADMIN
+SNOWFLAKE_SCHEMA=TEST_RESULTS
+SNOWFLAKE_ROLE=FLAKEBENCH_ROLE
 
 # Connection pool (results persistence + UI reads)
 SNOWFLAKE_POOL_SIZE=5
