feat(snowflake): add AI query timeouts and file-based metrics logger

--- a/env.example
+++ b/env.example
@@ -77,3 +77,9 @@ SNOWFLAKE_CONNECT_SOCKET_TIMEOUT=15
 SNOWFLAKE_BENCHMARK_CONNECT_LOGIN_TIMEOUT=15
 SNOWFLAKE_BENCHMARK_CONNECT_NETWORK_TIMEOUT=60
 SNOWFLAKE_BENCHMARK_CONNECT_SOCKET_TIMEOUT=60
+
+# AI/LLM query timeouts (seconds)
+# Cortex AI functions (AI_COMPLETE) can take 30-90+ seconds depending on prompt size.
+# These longer timeouts apply only to AI analysis queries.
+SNOWFLAKE_AI_CONNECT_NETWORK_TIMEOUT=120
+SNOWFLAKE_AI_CONNECT_SOCKET_TIMEOUT=120
