--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,14 @@ dev = [
     "httpx>=0.25.0",
     "ruff>=0.1.0",
 ]
+e2e = [
+    "pytest>=7.4.0",
+    "pytest-asyncio>=0.21.0",
+    "httpx>=0.25.0",
+    "websockets>=12.0",
+    "playwright>=1.40.0",
+    "pytest-playwright>=0.4.0",
+]
 
 [build-system]
 requires = ["hatchling"]
